--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.3",
-    "@angular/common": "^20.3.3",
+    "@angular/animations": "^20.3.15",
+    "@angular/common": "^20.3.15",
     "@angular/compiler": "^20.3.15",
-    "@angular/core": "^20.3.3",
-    "@angular/forms": "^20.3.3",
-    "@angular/platform-browser": "^20.3.3",
-    "@angular/platform-browser-dynamic": "^20.3.3",
-    "@angular/router": "^20.3.3",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "@angular/core": "^20.3.15",
+    "@angular/forms": "^20.3.15",
+    "@angular/platform-browser": "^20.3.15",
+    "@angular/platform-browser-dynamic": "^20.3.15",
+    "@angular/router": "^20.3.15",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.4",
-    "@angular/cli": "^20.3.4",
-    "@angular/compiler-cli": "^20.3.3",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
+    "@angular-devkit/build-angular": "^20.3.13",
+    "@angular/cli": "^20.3.13",
+    "@angular/compiler-cli": "^20.3.15",
+    "@types/jasmine": "^5.1.13",
+    "jasmine-core": "^5.13.0",
     "karma": "~6.4.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
